--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         </a>
         <a href="analytics/analytics.html" target="_blank"><img src="analytics.png" alt="Project 2"></a>
         <a href="health/health.html" target="_blank"><img src="health.png" alt="Project 3"></a>
-        <a href="https://eramalam.github.io/kfcweb/" target="_blank"><img src="kfc.png" alt="Project 4"></a>
+        <a href="https://eramalam.github.io/kfcweb" target="_blank"><img src="kfc.png" alt="Project 4"></a>
         <a href="exam/index.html" target="_blank"><img src="nexcent.png" alt="Project 5"></a>
         <a href="japness manu/index.html" target="_blank"><img src="jap.png" alt="Project 6"></a>
       </div>
